<resources>
    <string name="app_name">TheMovieDB</string>
    <string name="profile_string">Perfil</string>
    <string name="movies_string">Películas</string>
    <string name="trask_location_string">Rastrear</string>
    <string name="location_list_string">Ubicaciones</string>
    <string name="current_location_string">Ubicación Actual</string>
    <string name="images_string">Imágenes</string>
    <string name="share_location">Compartir ubicación</string>
    <string name="chose_image_to_load">Seleccione una imagen</string>
    <string name="save_image_to_load_in_firebase">Guardar imagenes en Firebase</string>
    <string name="lorem_ipsum_string">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="success">Resultados concluidos.</string>
    <string name="load_image">Subir imagen</string>
    <string name="load_foto_warning_data">Seleccione una foto distinta.</string>
    <string name="track_location_user_in_firebase">Seguimiento de ubicación</string>
    <string name="start">Iniciar</string>

    <!-- Error String -->
    <string name="error">Error</string>
    <string name="error_unknown">Error desconocido</string>
    <string name="none">Empty data</string>
    <string name="check_your_internet_connection">Check your internet connection</string>
    <string name="select_a_photo">Por favor, seleccione una foto.</string>
    <string name="fields_cannot_be_empty">Los campos no deben estar vacios.</string>
    <string name="no_data_found">No data found.</string>
    <string name="no_network_connection">No hay conexión de red, intente de nuevo.</string>
    <string name="error_server">Error en el servidor.</string>

    <!-- region Location y Notification -->
    <string name="activate_track_location">Activar</string>
    <string name="start_track_location">Iniciar</string>
    <string name="location_permission_denied_text">Permisos denegados</string>
    <string name="settings">Configuración</string>
    <string name="real_time_location">Ubicación en tiempo real</string>
    <string name="warning_permission">Los permisos de ubicación son necesarios para el correcto funcionamiento de la aplicación.</string>
    <string name="real_time_location_start">Activar ubicación en tiempo real</string>
    <string name="real_time_location_pause_finished">Ubicación en tiempo real finalizada.</string>
    <string name="notification_location_real_time_string">Ir a la sección de mapas para ver más detalles.</string>
    <string name="qu_vas_a_ver_hoy">¿Qué vas a ver hoy?</string>
    <string name="populares">Populares</string>
    <string name="mejores_calificadas">Mejores Calificadas</string>
    <string name="recomendaciones">Para ti</string>
    <string name="popular_description_string">Lista de películas populares actuales en TMDB (actualizada diariamente).</string>
    <string name="top_rated_description_string">Las películas mejor calificadas en TMDB.</string>
    <string name="recommendation_description_string">Próximas películas en los cines.</string>

</resources>