<?xml version="1.0" encoding="utf-8"?><menu xmlns:android="http://schemas.android.com/apk/res/android">    <item        android:id="@+id/profile"        android:enabled="true"        android:icon="@drawable/ic_profile"        android:title="@string/profile_string"        />    <item        android:id="@+id/movies"        android:enabled="true"        android:icon="@drawable/ic_movie_list"        android:title="@string/movies_string"        />    <item        android:id="@+id/locations_list"        android:enabled="true"        android:icon="@drawable/ic_location_map"        android:title="@string/location_list_string"        />    <item        android:id="@+id/images"        android:enabled="true"        android:icon="@drawable/ic_upload_images"        android:title="@string/images_string"        /></menu>