<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:viewBindingIgnore="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/text_view_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qu_vas_a_ver_hoy"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@color/blue_500"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_view_populares_movies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/populares"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/sky_200"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_title" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_popular_movies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:clipToPadding="false"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_populares_movies"
                tools:itemCount="1"
                tools:listitem="@layout/item_fragment_movie_list" />

            <TextView
                android:id="@+id/text_view_top_rating_movies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/mejores_calificadas"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/sky_200"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recycler_view_popular_movies" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_top_rating_movies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:clipToPadding="false"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_top_rating_movies"
                tools:itemCount="1"
                tools:listitem="@layout/item_fragment_movie_list" />

            <TextView
                android:id="@+id/text_view_recommendation_movies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/recomendaciones"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/sky_200"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recycler_view_top_rating_movies" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_recommendation_movies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="30dp"
                android:clipToPadding="false"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_recommendation_movies"
                tools:itemCount="1"
                tools:listitem="@layout/item_fragment_movie_list" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>